# legal

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  preview.html
.github/workflows/: deploy-pages.yml
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/web/public/: robots.txt
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: error.tsx  layout.tsx
apps/web/src/app/app/contracts/: page.tsx
apps/web/src/app/app/dashboard/: page.tsx
apps/web/src/components/: ErrorBoundary.tsx  LandingClient.tsx  LoadingSkeleton.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/lib/: api.ts
docs/: ARCHITECTURE.md
infra/: docker-compose.yml
prompts/commercial-legal/: chile-contract-review.md
services/api/: .env.example  pyproject.toml
services/api/app/: main.py
services/api/app/api/: auth.py  documents.py  pricing.py  reviews.py  tenants.py  waitlist.py
services/api/app/core/: auth.py  config.py  db.py
services/api/app/models/: __init__.py  document.py  review.py  tenant.py  user.py  waitlist.py
services/api/app/schemas/: auth.py  documents.py  pricing.py  review_schemas.py  reviews.py  tenant.py
services/api/app/services/: document_store.py  flow_service.py  llm_service.py  pdf_extractor.py  review_store.py
services/api/tests/: conftest.py  smoke_test.py  test_auth.py  test_documents.py  test_flow_service.py  test_health.py  test_llm_service.py  test_pdf_extractor.py  test_pricing.py  test_review_flow.py  test_reviews.py  test_tenants.py  test_waitlist.py
(+9 files in other folders)
